{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 238,
  "lineage": "34655a57-5a93-057d-7a09-b47dfba36386",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloud_drive",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:internet-gateway/igw-0e8f3cb8b83c0b963",
            "id": "igw-0e8f3cb8b83c0b963",
            "owner_id": "169447612702",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "cloud-drive-igw"
            },
            "tags_all": {
              "Name": "cloud-drive-igw"
            },
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:169447612702:loadbalancer/app/web-alb/e81457fc60284194",
            "arn_suffix": "app/web-alb/e81457fc60284194",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-alb-151721327.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:169447612702:loadbalancer/app/web-alb/e81457fc60284194",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-03e41cde95a3e1ffc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04578548e78c0cc41"
              },
              {
                "subnet_id": "subnet-0b9192edc31061d31"
              },
              {
                "subnet_id": "subnet-0e5cd55fdb012f36e"
              }
            ],
            "subnets": [
              "subnet-04578548e78c0cc41",
              "subnet-0b9192edc31061d31",
              "subnet-0e5cd55fdb012f36e"
            ],
            "tags": {
              "Name": "WebALB"
            },
            "tags_all": {
              "Name": "WebALB"
            },
            "vpc_id": "vpc-09bc6798758a63104",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:169447612702:loadbalancer/app/web-alb/e81457fc60284194"
          },
          "dependencies": [
            "aws_security_group.cloud_drive_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:169447612702:listener/app/web-alb/e81457fc60284194/cc289205763a176c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:169447612702:targetgroup/web-tg/21197385293c7d08",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:169447612702:listener/app/web-alb/e81457fc60284194/cc289205763a176c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:169447612702:loadbalancer/app/web-alb/e81457fc60284194",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.web_alb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.cloud_drive_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:169447612702:targetgroup/web-tg/21197385293c7d08",
            "arn_suffix": "targetgroup/web-tg/21197385293c7d08",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:169447612702:targetgroup/web-tg/21197385293c7d08",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:169447612702:loadbalancer/app/web-alb/e81457fc60284194"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloud_drive"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:route-table/rtb-05b73e8e058f0c37a",
            "id": "rtb-05b73e8e058f0c37a",
            "owner_id": "169447612702",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "cloud-drive-rtb-private1-var.az_a"
            },
            "tags_all": {
              "Name": "cloud-drive-rtb-private1-var.az_a"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:route-table/rtb-03634b9a837ce3540",
            "id": "rtb-03634b9a837ce3540",
            "owner_id": "169447612702",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "cloud-drive-rtb-private2-var.az_b"
            },
            "tags_all": {
              "Name": "cloud-drive-rtb-private2-var.az_b"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:route-table/rtb-0a8b570b09e5607e4",
            "id": "rtb-0a8b570b09e5607e4",
            "owner_id": "169447612702",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "cloud-drive-rtb-private3-var.var.az_c"
            },
            "tags_all": {
              "Name": "cloud-drive-rtb-private3-var.var.az_c"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:route-table/rtb-03867704971c7dabe",
            "id": "rtb-03867704971c7dabe",
            "owner_id": "169447612702",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8f3cb8b83c0b963",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-drive-rtb-public"
            },
            "tags_all": {
              "Name": "cloud-drive-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cloud_drive",
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059c8541ca131a96f",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-05b73e8e058f0c37a",
            "subnet_id": "subnet-067633a09ed782497"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private1",
            "aws_subnet.private1",
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013dec7b911217aeb",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03634b9a837ce3540",
            "subnet_id": "subnet-050541dc1bab32bf0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private2",
            "aws_subnet.private2",
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bfc3f06451976ac",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0a8b570b09e5607e4",
            "subnet_id": "subnet-0adb0830993832ba3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private3",
            "aws_subnet.private3",
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b1121388ba2453a",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03867704971c7dabe",
            "subnet_id": "subnet-0b9192edc31061d31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cloud_drive",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c151f4a8a838bc0",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03867704971c7dabe",
            "subnet_id": "subnet-04578548e78c0cc41"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cloud_drive",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081fc0d3556ef436b",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03867704971c7dabe",
            "subnet_id": "subnet-0e5cd55fdb012f36e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cloud_drive",
            "aws_route_table.public",
            "aws_subnet.public3",
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloud_drive_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:security-group/sg-03e41cde95a3e1ffc",
            "description": "Security group for cloud-drive instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e41cde95a3e1ffc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cloud-drive-sg",
            "name_prefix": "",
            "owner_id": "169447612702",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-drive-sg"
            },
            "tags_all": {
              "Name": "cloud-drive-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloud_drive"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docdb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:security-group/sg-0a66a081217e95f80",
            "description": "Allow inbound traffic to DocumentDB from web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a66a081217e95f80",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e41cde95a3e1ffc"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "docdb-security-group",
            "name_prefix": "",
            "owner_id": "169447612702",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-drive-sg-docdb"
            },
            "tags_all": {
              "Name": "cloud-drive-sg-docdb"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_drive_sg",
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:subnet/subnet-067633a09ed782497",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067633a09ed782497",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "169447612702",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "cloud-drive-subnet-private1-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "cloud-drive-subnet-private1-ap-southeast-1a"
            },
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:subnet/subnet-050541dc1bab32bf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050541dc1bab32bf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "169447612702",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "cloud-drive-subnet-private2-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "cloud-drive-subnet-private2-ap-southeast-1b"
            },
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:subnet/subnet-0adb0830993832ba3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.16.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adb0830993832ba3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "169447612702",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "cloud-drive-subnet-private3-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "cloud-drive-subnet-private3-ap-southeast-1c"
            },
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:subnet/subnet-0b9192edc31061d31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9192edc31061d31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "169447612702",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "cloud-drive-subnet-public1-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "cloud-drive-subnet-public1-ap-southeast-1a"
            },
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloud_drive"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:subnet/subnet-04578548e78c0cc41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04578548e78c0cc41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "169447612702",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "cloud-drive-subnet-public2-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "cloud-drive-subnet-public2-ap-southeast-1b"
            },
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloud_drive"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:subnet/subnet-0e5cd55fdb012f36e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.16.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5cd55fdb012f36e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "169447612702",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "cloud-drive-subnet-public3-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "cloud-drive-subnet-public3-ap-southeast-1c"
            },
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloud_drive"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloud_drive",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:vpc/vpc-09bc6798758a63104",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-06974e9fa0ced29f3",
            "default_route_table_id": "rtb-0c54629b69d65550c",
            "default_security_group_id": "sg-03574ed5fb0372298",
            "dhcp_options_id": "dopt-0851eb65bc59b1a24",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09bc6798758a63104",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c54629b69d65550c",
            "owner_id": "169447612702",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "cloud-drive-vpc"
            },
            "tags_all": {
              "Name": "cloud-drive-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:169447612702:vpc-endpoint/vpce-0f669e0ae5c97c96b",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "3.5.148.0/22",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0f669e0ae5c97c96b",
            "owner_id": "169447612702",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03634b9a837ce3540",
              "rtb-05b73e8e058f0c37a",
              "rtb-0a8b570b09e5607e4"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "service_region": "ap-southeast-1",
            "state": "available",
            "tags": {
              "Name": "cloud-drive-vpce-s3"
            },
            "tags_all": {
              "Name": "cloud-drive-vpce-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09bc6798758a63104"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private1",
            "aws_route_table.private2",
            "aws_route_table.private3",
            "aws_vpc.cloud_drive"
          ]
        }
      ]
    }
  ]
}